fixed extra quotes and z-index of nav bar in mobile

--- a/src/assets/scss/components/_custom.scss
+++ b/src/assets/scss/components/_custom.scss
@@ -91,7 +91,9 @@ a.button.small {
 
 /*showcase*/
 
-
+#first {
+  width:100%;
+}
 
 /* who we are */
 
@@ -173,4 +175,11 @@ footer {
   span {
     color: $primary;
   }
+}
+
+/*idea for mobile nav sticky*/
+.title-bar {
+  position: fixed;
+  width:100%;
+  z-index: 1;
 }
